--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,3 +56,9 @@ body{
     background-color: #004E8F;
     color: $color-blanco;
 }
+
+.servicios-titulo{
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
