--- a/css/main.css
+++ b/css/main.css
@@ -150,3 +150,8 @@ body {
   transform: scale(1.1, 1.1);
   background-color: #004E8F;
   color: #f0f0f0; }
+
+.servicios-titulo {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 20px; }
