--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,19 @@
     justify-content: center; }
   .card-conteiner-servicio {
     width: 300px;
-    height: 500px; }
+    height: 350px; }
   .card-conteiner-conocenos {
-    width: 400px;
+    width: 300px;
     height: 550px; }
+  .img-conocenos {
+    width: 100px; }
+  .text-conteiner {
+    margin: 10px; }
+  .name-conocenos {
+    margin-top: 10px;
+    margin-bottom: 10px; }
   .text-conteiner-lg {
-    width: 350px; } }
+    width: 280px; } }
 
 /*card del Index*/
 .cards-titulo-home {
@@ -57,12 +64,19 @@
 .cards-content-home {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-around;
+  padding-bottom: 50px; }
 
 .cards-home {
   display: flex;
   flex-direction: column;
   align-items: center; }
+
+@media only screen and (max-width: 768px) {
+  .cards-content-home {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; } }
 
 /*Header*/
 .header-grid {
@@ -75,7 +89,12 @@ header {
   align-items: center;
   background-color: #1b1c1e;
   color: #f0f0f0;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  height: 15vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index: 999; }
   header img {
     width: 80px;
     height: 80px; }
@@ -91,23 +110,87 @@ nav ul {
       text-decoration: none !important;
       color: #f0f0f0 !important; }
 
+.check {
+  display: none; }
+
+.menu {
+  display: none; }
+
+@media only screen and (max-width: 768px) {
+  nav {
+    display: block;
+    z-index: 9999;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 0%;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #004E8F; }
+    nav ul {
+      display: flex;
+      flex-direction: column;
+      margin-top: 15px;
+      padding-left: 20px;
+      padding-right: 10px; }
+      nav ul li {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        color: white; }
+        nav ul li a {
+          text-decoration: none !important; }
+  .check:checked ~ nav {
+    width: 100%;
+    height: 100%;
+    transition: width 1.5s;
+    overflow-y: hidden; }
+  .menu {
+    display: block;
+    width: 30x;
+    height: 30px;
+    filter: invert(1); } }
+
 .footer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  background-color: #1b1c1e;
-  color: #f0f0f0;
-  height: 50px;
-  width: 100%;
+  background-color: #f0f0f0;
+  color: #1b1c1e;
+  height: auto;
+  width: auto;
+  padding-left: 100px;
+  padding-right: 100px;
   bottom: 0; }
 
+.footer-boots {
+  padding-top: 20px; }
+
 .footer-grid {
-  grid-area: footer;
-  position: absolute; }
+  grid-area: footer; }
 
 .footer-sin-grid {
   position: relative; }
+
+.footer-bottom {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.footer-link {
+  text-decoration: none;
+  color: #6d1f1f;
+  font-weight: bold; }
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 30px;
+    padding-right: 30px; }
+  .footer-bottom {
+    text-align: center; } }
 
 html {
   min-height: 100%;
@@ -118,8 +201,78 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #1b1c1e; }
 
+.fila {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 50px;
+  height: 85vh; }
+
+.titulo {
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: 0px;
+  font-family: 'Roboto', sans-serif;
+  animation-duration: 3s;
+  animation-name: aparecer; }
+
+.titulo-index {
+  font-size: 40px; }
+
+.titulo--blue {
+  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  font-size: 40px; }
+
+.subtitulo {
+  color: white;
+  font-size: 24px; }
+
 .background {
   background: linear-gradient(90deg, #72C6EF 0%, #004E8F 100%); }
+
+.text-welcome {
+  width: 500px;
+  color: azure;
+  font-size: large; }
+
+.img-home {
+  width: 500px;
+  padding-bottom: 30px;
+  transition: all 1s; }
+
+.content-boton {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; }
+
+.servicios-home {
+  font-size: 45px;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px; }
+
+.img-home:hover {
+  transform: scale(1.1, 1.1); }
+
+.icono-conteiner {
+  width: 100px;
+  height: 100px;
+  padding: 50px;
+  background: azure;
+  border-radius: 50%;
+  box-shadow: 9px 3px 10px 0px rgba(0, 0, 0, 0.41); }
+
+.icono {
+  width: 100px; }
+
+.icono-text {
+  color: azure;
+  width: 300px;
+  text-align: left;
+  padding-bottom: 30px; }
 
 .container-black {
   margin-bottom: 50px;
@@ -151,7 +304,77 @@ body {
   background-color: #004E8F;
   color: #f0f0f0; }
 
+.text-trabajo {
+  color: white;
+  padding-left: 150px;
+  padding-right: 150px; }
+
 .servicios-titulo {
   text-align: center;
   padding-top: 50px;
   padding-bottom: 20px; }
+
+@media only screen and (max-width: 768px) {
+  .fila {
+    padding-top: 5px; }
+  .titulo {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center; }
+  .titulo--blue {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-size: 25px; }
+  .titulo-index {
+    font-size: 30px; }
+  .subtitulo {
+    display: none; }
+  .text-welcome {
+    width: 300px;
+    font-size: 15px;
+    font-weight: bold; }
+  .servicios-home {
+    font-size: 25px;
+    padding-top: 50px;
+    padding-bottom: 50px; }
+  .icono-conteiner {
+    width: 50px !important;
+    height: 50px !important;
+    padding: 30px !important;
+    margin-bottom: 35px; }
+  .icono {
+    width: 50px !important; }
+  .img-home:hover {
+    transform: scale(1.1, 1.1); }
+  .icono-conteiner {
+    width: 100px;
+    height: 100px;
+    padding: 50px;
+    background: azure;
+    border-radius: 50%;
+    box-shadow: 9px 3px 10px 0px rgba(0, 0, 0, 0.41); }
+  .icono {
+    width: 100px; }
+  .icono-text {
+    color: azure;
+    width: 300px;
+    text-align: left;
+    padding-bottom: 30px; }
+  .img-home {
+    display: none; }
+  .boton {
+    width: 180px;
+    margin-bottom: 20px; }
+  .text-trabajo {
+    padding-left: 50px;
+    padding-right: 50px; }
+  .content-boton {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: small; } }
