--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -12,6 +12,11 @@ header{
     background-color: $color-negro;
     color: $color-blanco;
     font-family: 'Roboto', sans-serif;
+    height: 15vh;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    z-index: 999;
     img{
         width: 80px; 
         height: 80px;
@@ -32,4 +37,59 @@ ul{
         }
     }
 }
+}
+
+.check{
+    display: none;
+}
+
+.menu{
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+    nav{
+        display: block;
+        z-index: 9999;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 0%;
+        height: 100vh;
+        overflow: hidden;
+        background-color:  #004E8F;
+        ul{ 
+            display: flex;
+            flex-direction: column;
+            margin-top: 15px;
+            padding-left: 20px;
+            padding-right: 10px;
+            li {
+                margin-top: 10px;
+                margin-bottom: 10px;   
+                color: white; 
+                a{
+                    text-decoration: none!important;
+                    
+                }            
+            }
+        }
+
+    }
+
+    .check:checked ~ nav{
+        width: 100%;
+        height: 100%;
+        transition: width 1.5s;
+        overflow-y: hidden;
+    }
+
+    .menu{
+        display: block;
+        width: 30x;
+        height: 30px;
+        filter: invert(1);
+    }
+
 }
