--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ header {
   background-color: #1b1c1e;
   color: #f0f0f0;
   font-family: 'Roboto', sans-serif;
+  width: 100vw;
   height: 15vh;
   position: -webkit-sticky;
   position: sticky;
@@ -116,15 +117,19 @@ nav ul {
 .menu {
   display: none; }
 
+.cerrar {
+  display: none; }
+
 @media only screen and (max-width: 768px) {
   nav {
     display: block;
-    z-index: 9999;
+    z-index: 9000;
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 0%;
-    height: 100vh;
+    right: 0px;
+    width: 0vw;
+    height: 0vh;
     overflow: hidden;
     background-color: #004E8F; }
     nav ul {
@@ -139,16 +144,16 @@ nav ul {
         color: white; }
         nav ul li a {
           text-decoration: none !important; }
-  .check:checked ~ nav {
-    width: 100%;
-    height: 100%;
-    transition: width 1.5s;
-    overflow-y: hidden; }
   .menu {
     display: block;
     width: 30x;
     height: 30px;
-    filter: invert(1); } }
+    filter: invert(1); }
+  .check:checked ~ nav {
+    width: 100vw;
+    height: 100vh;
+    transition: width 1.5s;
+    overflow-y: hidden; } }
 
 .footer {
   display: flex;
@@ -378,3 +383,13 @@ body {
     justify-content: space-around;
     align-items: center;
     font-size: small; } }
+
+@media only screen and (max-width: 576px) {
+  .titulo--blue {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    font-size: 20px; } }
