--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -12,6 +12,7 @@ header{
     background-color: $color-negro;
     color: $color-blanco;
     font-family: 'Roboto', sans-serif;
+    width: 100vw;
     height: 15vh;
     position: -webkit-sticky;
     position: sticky;
@@ -47,16 +48,21 @@ ul{
     display: none;
 }
 
+.cerrar{
+    display: none;
+}
+
 @media only screen and (max-width: 768px) {
 
     nav{
         display: block;
-        z-index: 9998;
+        z-index: 9000;
         position: fixed;
         top: 0px;
         left: 0px;
-        width: 0%;
-        height: 100vh;
+        right: 0px;
+        width: 0vw;
+        height: 0vh;
         overflow: hidden;
         background-color:  #004E8F;
         ul{ 
@@ -78,18 +84,18 @@ ul{
 
     }
 
-    .check:checked ~ nav{
-        width: 100%;
-        height: 100%;
-        transition: width 1.5s;
-        overflow-y: hidden;
-    }
-
     .menu{
         display: block;
         width: 30x;
         height: 30px;
         filter: invert(1);
+    }
+
+    .check:checked ~ nav{
+        width: 100vw;
+        height: 100vh;
+        transition: width 1.5s;
+        overflow-y: hidden;
     }
 
 }
