--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,3 +242,16 @@ body{
     font-size: small;
 }
 }
+
+@media only screen and (max-width: 576px) {
+    .titulo--blue{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-right: 0px;
+        padding-left: 0px;
+        margin-top: 30px;
+        margin-bottom: 15px;
+        font-size: 20px;
+    }  
+}
+
